--- a/src/app/components/entidades/pagamento/pagamento.component.html
+++ b/src/app/components/entidades/pagamento/pagamento.component.html
@@ -29,6 +29,12 @@
     </div>
 </div> -->
 
-<div id="myPaypalButtons">
+<div class="pagamento">
+    <div class="pagamento-text">
+        Finalize sua compra
+    </div>
+</div>
 
+<div class="pagamento-paypal">
+    <div id="myPaypalButtons"></div>
 </div>
