--- a/src/app/components/entidades/cursos/cursos.component.html
+++ b/src/app/components/entidades/cursos/cursos.component.html
@@ -1,3 +1,9 @@
+<div class="encontre-curso">
+  <div class="para-voce">
+    Encontre o melhor curso para você
+  </div>
+</div>
+
 <div class="container">
   <div class="input-group">
     <input class="form-control" type="search" aria-label="Search" #inputPesquisa id="input-pesquisa" (input)="pesquisar(inputPesquisa.value)" type="text" placeholder="Curso...">
