--- a/src/app/components/entidades/carrinho/carrinho.component.css
+++ b/src/app/components/entidades/carrinho/carrinho.component.css
@@ -13,7 +13,6 @@
     color:#A435F0;
 }
 
-
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap');
 
 .container{
@@ -125,5 +124,6 @@ div button.btn:hover {
     width: 240px;
     height: 140px;
     border: 1px solid black;
+    border-radius: 7px;
     padding: 20px;
 }
