Ajustes nos botões de login e cadastro

--- a/src/app/components/conta/formulario-usuario-login/formulario-usuario-login.component.html
+++ b/src/app/components/conta/formulario-usuario-login/formulario-usuario-login.component.html
@@ -19,7 +19,7 @@
             <span (click)="esconderSucesso()">x</span>
         </div>
         <div class="controles">
-            <button type="submit" class="btn" (click)="validarCampos()">Salvar</button>
+            <button type="submit" class="btn" (click)="validarCampos()">Enviar</button>
         </div>
 
         <div class="links">
