--- a/src/app/components/conta/formulario-usuario/formulario-usuario.component.html
+++ b/src/app/components/conta/formulario-usuario/formulario-usuario.component.html
@@ -23,7 +23,7 @@
         </div>
         <div class="controles">      
             <p class="link" [routerLink]="['/login']">Voltar</p>
-            <button type="submit" class="btn" (click)="validarCampos(senha, senhaConfirmada)">Salvar</button>
+            <button type="submit" class="btn" (click)="validarCampos(senha, senhaConfirmada)">Cadastrar</button>
         </div>
     </form>
 </article>
