--- a/src/app/components/entidades/pagamento/pagamento.component.css
+++ b/src/app/components/entidades/pagamento/pagamento.component.css
@@ -105,6 +105,11 @@ p {
 .pagamento-text {
     font-size: 50px;
     font-weight: normal;
+    cursor: pointer;
+}
+
+.pagamento-text:hover {
+    color:#A435F0;
 }
 
 .pagamento-paypal {
