--- a/src/app/components/entidades/aprendizado/aprendizado.component.html
+++ b/src/app/components/entidades/aprendizado/aprendizado.component.html
@@ -1,12 +1,6 @@
 <div class="aprendizado-column">
     <div class="seus-cursos">
-        Aqui você estuda seus cursos
-    </div>
-</div>
-
-<div class="escolha">
-    <div class="selecione">
-        Selecione um curso para estudar
+        <h3>Meus cursos</h3>
     </div>
 </div>
 
