--- a/src/app/components/entidades/curso-details/curso-details.component.html
+++ b/src/app/components/entidades/curso-details/curso-details.component.html
@@ -10,9 +10,15 @@
     </div>
   </div>
 
-  <div class="curso-info">
-    <h5 class="card-title">{{curso.titulo}}</h5>
-    <p class="card-text">{{curso.descricao}}</p>
+  <div class="infos">
+    <div class="curso">
+      <h5 class="card-title">{{curso.titulo}}</h5>
+      <p class="card-text">{{curso.descricao}}</p>
+    </div>
+
+    <div class="professor">
+      <p class="professor-text">Criado por {{professor!.nome}} {{professor!.sobrenome}}</p>
+    </div>
   </div>
 
 </div>
