--- a/src/app/components/entidades/curso-details/curso-details.component.css
+++ b/src/app/components/entidades/curso-details/curso-details.component.css
@@ -62,7 +62,7 @@ div button.btn:hover {
     color: white;
 }
 .card-title:hover{
-    color: #A435F0;
+    font-weight: 600;
 }
 .card-text{
     height: 10vh;
@@ -72,18 +72,30 @@ div button.btn:hover {
     font-weight: 600;
 }
 .main {
-    background-color: #1C1D1F;
+    background-color: #222;
     width: 100%;
     height: 200px;
     margin: 20px;
     padding: 20px;
 
+    border-radius: 5px;
+
     display: flex;
 }
 
-.curso-info {
+.infos {
     margin: 30px;
     width: 500px;
+}
+
+.professor-text {
+    color: #fff;
+    font-weight: 400;
+    cursor: pointer;
+}
+
+.professor-text:hover{
+    font-weight: 500;
 }
 
 
