--- a/src/app/components/entidades/cursos/cursos.component.css
+++ b/src/app/components/entidades/cursos/cursos.component.css
@@ -2,7 +2,6 @@
 
 .container{
     margin: 0 auto;
-    margin-bottom: 100px;
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -17,8 +16,8 @@ div .input-group{
     width: 450px;
     display: flex;
     align-self: flex-start;
-    margin-top: 20px;
-    margin-bottom: 80px;
+    margin: 20px 0;
+    margin-bottom: 20px;
 }
 
 div .cursos{
@@ -84,22 +83,33 @@ div button.btn:hover {
 }
 
 .encontre-curso {
-    height: 200px;
+    font-family: 'Montserrat';
     color: white;
-    background-color: #1C1D1F;
-    font-size: 30px;
+    
     margin-top: 20px;
+    height: 200px;
+    
+    background-color: #222;
+    box-shadow: 0px 0px 2px #111;
+    border-radius: 5px;
+    
+
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Montserrat';
 }
 
 .para-voce {
+    font-weight: 500;
     text-align: center;
     cursor: pointer;
 }
 
-.para-voce:hover {
-    color: #A435F0;
+.para-voce h3{
+    font-weight: 400;
+    font-size: 30px;
+}
+
+.para-voce h3:hover {
+    font-weight: 500;
 }
