--- a/src/app/components/entidades/professor-details/professor-details.component.css
+++ b/src/app/components/entidades/professor-details/professor-details.component.css
@@ -86,9 +86,10 @@ div button.btn:hover {
 }
 
 .cursos{
+    margin: 20px;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-start;
     gap: 30px;
     flex-wrap: wrap;
 }
