--- a/src/app/components/entidades/carrinho/carrinho.component.html
+++ b/src/app/components/entidades/carrinho/carrinho.component.html
@@ -5,7 +5,7 @@
     <p>Estes são os seus cursos!</p>
 </div>
 <div class="continuar-comprando">
-  <button type="button" class="btn" [routerLink]="['/cursos']">Continuar comprando</button>
+  <button id="continuar-btn" type="button" class="btn" [routerLink]="['/cursos']">Continuar comprando</button>
 </div>
 
 <div class="container">
