--- a/src/app/components/entidades/wishlist/wishlist.component.css
+++ b/src/app/components/entidades/wishlist/wishlist.component.css
@@ -84,21 +84,24 @@ div button.btn:hover {
 
 .sub-header {
     margin-top: 20px;
-    background-color: #1C1D1F;
+    background-color: #222;
     color: #FFFFFF;
     height: 200px;
     font-family: 'Montserrat';
     font-size: 40px;
+
+    border-radius: 5px;
 
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.my-learning {
+.my-learning h3{
     cursor: pointer;
+    font-size: 30px;
 }
 
-.my-learning:hover {
-    color: #A435F0;
+.my-learning h3:hover {
+    font-weight: 500;
 }
