--- a/src/app/components/entidades/aprendizado/aprendizado.component.html
+++ b/src/app/components/entidades/aprendizado/aprendizado.component.html
@@ -1,19 +1,30 @@
 <div class="aprendizado-column">
-    <div class="seus-cursos">
-        <h3>Meus cursos</h3>
-    </div>
+  <div class="seus-cursos">
+    <h3>Meus cursos</h3>
+  </div>
 </div>
 
-<div class="meus-cursos">
-    <ul class="list-group" *ngFor="let curso of cursos">
-        <li class="list-group-item" [routerLink]="['/curso-aprendizado']">
-            <div class="img-curso">
-                <img src="{{curso.imagem}}" alt="">
+<div class="container">
+    <div class="card w-75" *ngFor="let curso of cursos">
+
+        <div class="row no-gutters">
+      
+          <div class="col-md-4">
+            <img src="{{curso.imagem}}" alt="...">
+          </div>
+      
+          <div class="col-md-8">
+      
+            <div class="card-body">
+      
+              <div class="infos">
+                <h5 class="card-title" [routerLink]="['/curso-aprendizado']">{{curso.titulo}}</h5>
+                <p class="card-text">{{curso.descricao}}</p>
+              </div>
             </div>
-    
-            <div id="curso-titulo">
-                {{curso.titulo}}
-            </div>
-        </li>
-    </ul>
+      
+          </div>
+      
+        </div>
+      </div>
 </div>
