--- a/src/app/components/entidades/professor-details/professor-details.component.html
+++ b/src/app/components/entidades/professor-details/professor-details.component.html
@@ -35,7 +35,7 @@
           <!-- <mat-icon class="icon" (click)="deletarServico(servico.id)"> delete</mat-icon>
                 <mat-icon class="icon" (click)="enviarIdServico(servico.id)" [routerLink]="['/curso-update-formulario']">edit</mat-icon> -->
         </div>
-        <button type="button" class="btn" (click)="sessionCurso()">Adicionar ao carrinho</button>
+        <button type="button" class="btn" (click)="sessionCurso(curso)">Adicionar ao carrinho</button>
       </div>
     </div>
   </div>
