--- a/src/app/components/entidades/carrinho/carrinho.component.html
+++ b/src/app/components/entidades/carrinho/carrinho.component.html
@@ -36,7 +36,7 @@
     <div class="card" style="max-width: 18rem;">
       <img src="{{cursoF.imagem}}" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">{{cursoF.titulo}}</h5>
+        <h5 class="card-title" [routerLink]="['/curso-details']" (click)="enviarIdCurso(cursoF.id)">{{cursoF.titulo}}</h5>
         <p class="card-text">{{cursoF.descricao}}</p>
         <p class="card-price">R$ {{cursoF.valor}}</p>
         <button type="button" class="btn" (click)="removerCurso(cursoF)">Remover do carrinho</button>
@@ -49,7 +49,7 @@
     <div class="card" style="max-width: 18rem;" *ngFor="let curso of cursos">
       <img src="{{curso.imagem}}" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">{{curso.titulo}}</h5>
+        <h5 class="card-title" [routerLink]="['/curso-details']" (click)="enviarIdCurso(curso.id)">{{curso.titulo}}</h5>
         <p class="card-text">{{curso.descricao}}</p>
         <p class="card-price">R$ {{curso.valor}}</p>
         <button type="button" class="btn" (click)="removerCurso(curso)">Remover do carrinho</button>
