--- a/src/app/components/entidades/professor-details/professor-details.component.html
+++ b/src/app/components/entidades/professor-details/professor-details.component.html
@@ -28,7 +28,7 @@
     <div class="card" style="max-width: 18rem;" *ngFor="let curso of cursosProfessor">
       <img src="{{curso.imagem}}" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">{{curso.titulo}}</h5>
+        <h5 class="card-title" [routerLink]="['/curso-details']" (click)="enviarIdCurso(curso.id)">{{curso.titulo}}</h5>
         <p class="card-text">{{curso.descricao}}</p>
         <p class="card-price">R$ {{curso.valor}}</p>
         <div class="div-icons">
