Atributo da imagem do usuário implementado

--- a/src/app/components/entidades/files/files.component.html
+++ b/src/app/components/entidades/files/files.component.html
@@ -5,3 +5,4 @@
 <input type="text" placeholder="File to View or Delete"  name="image" [(ngModel)]="file">
 <button class="btn btn-primary" style="margin-left: 10px" (click)="viewFile()">View File</button>
 <button class="btn btn-primary" style="margin-left: 10px" (click)="deleteFile()">Delete File</button>
+<img src="{{urlImagem}}{{file}}" alt="">
