--- a/src/app/components/conta/formulario-usuario/formulario-usuario.component.html
+++ b/src/app/components/conta/formulario-usuario/formulario-usuario.component.html
@@ -23,7 +23,8 @@
         </div>
         <div class="controles">      
             <p class="link" [routerLink]="['/login']">Voltar</p>
-            <button type="submit" class="btn" (click)="validarCampos(senha, senhaConfirmada)">Cadastrar</button>
+            <button type="submit" class="btn" [disabled]="!arquivosSelecionados" (click)="uploadArquivo()" (click)="validarCampos(senha, senhaConfirmada)">Cadastrar</button>
         </div>
+        <input type="file" id="customFile" (change)="arquivoSelecionado($event)" placeholder="File To Upload">
     </form>
 </article>
