--- a/src/app/components/layout/home/home.component.html
+++ b/src/app/components/layout/home/home.component.html
@@ -13,6 +13,7 @@
     </ul>
   </div>
   <div class="container-options">
+    <mat-icon [routerLink]="['/usuario-details']" class="icon">person</mat-icon>
     <mat-icon [routerLink]="['/aprendizado']" class="icon">menu_book</mat-icon>
     <mat-icon [routerLink]="['/wl']" class="icon" (click)="emitirClickWish()">favorite_border</mat-icon>
     <mat-icon [routerLink]="['/carrinho']" class="icon">shopping_cart</mat-icon>
