Path do bucket no S3 da AWS implementado no component ts que vai consumí-lo

--- a/src/app/components/entidades/usuario-details/usuario-details.component.html
+++ b/src/app/components/entidades/usuario-details/usuario-details.component.html
@@ -1,7 +1,7 @@
 <section class="container">
     <div class="profile">
       <div class="links">
-        <img src="{{usuario.imagem}}" class="rounded-circle" alt="...">
+        <img src="{{urlImagem}}{{usuario.imagem}}" class="rounded-circle" alt="...">
       </div>
       
       <ul class="list-group">
