Componente ensine conosco e explicações de curso de template

--- a/src/app/components/entidades/usuario-details/usuario-details.component.html
+++ b/src/app/components/entidades/usuario-details/usuario-details.component.html
@@ -2,7 +2,7 @@
     <div class="profile">
       <div class="links">
         <img src="{{urlImagem}}{{usuario.imagem}}" class="rounded-circle" alt="...">
-        <button id="btn-pedido" type="button" class="btn" [routerLink]="['/']">Ensine conosco</button>
+        <button id="btn-pedido" type="button" class="btn" [routerLink]="['/ensine-conosco']">Ensine conosco</button>
       </div>
       
       <ul class="list-group">
