--- a/src/app/components/entidades/main/main.component.css
+++ b/src/app/components/entidades/main/main.component.css
@@ -39,6 +39,8 @@
     background-image: url("src/assets/img/banner.png");
     background-position: center;
     background-repeat: no-repeat;
+
+    display: flex;
 }
 
 .card{
