Mostrando sobrenome no Usuário Details

--- a/src/app/components/entidades/ensine-conosco/ensine-conosco.component.html
+++ b/src/app/components/entidades/ensine-conosco/ensine-conosco.component.html
@@ -2,9 +2,7 @@
     <div class="banner-text">
         Torne-se um professor
     </div>
-    <div class="banner-btn" class="btn" id="btn-pedido">
-        Comece agora
-    </div>
+    <button class="banner-btn" class="btn" id="btn-pedido" [routerLink]="['/professor-formulario']">Comece agora</button>
 </div>
 
 <div class="razoes">
