--- a/src/app/components/entidades/usuario-details/usuario-details.component.html
+++ b/src/app/components/entidades/usuario-details/usuario-details.component.html
@@ -8,7 +8,7 @@
       <ul class="list-group">
         <a  class="list-group-item list-group-item-action">
           <div class="d-flex w-100 justify-content-between">
-            <h5 class="mb-1">{{usuario.nome}}</h5>
+            <h5 class="mb-1">{{usuario.nome}} {{usuario.sobrenome}}</h5>
             <p class="mb-1">{{usuario.email}}</p>
             <p class="mb-1"></p>
           </div>
