Padronizando todos os banners dos componentes

--- a/src/app/components/entidades/professores/professores.component.html
+++ b/src/app/components/entidades/professores/professores.component.html
@@ -1,3 +1,11 @@
+<div class="encontre-curso">
+  <div class="para-voce">
+    <h3>
+      Veja os professores que ensinam conosco
+    </h3>
+  </div>
+</div>
+
 <div class="container">
 
   <div class="input-group">
