--- a/src/app/components/entidades/professores/professores.component.css
+++ b/src/app/components/entidades/professores/professores.component.css
@@ -82,3 +82,35 @@ div button.btn:hover {
 .input-group{
     max-width: 32vw;
 }
+
+.encontre-curso {
+    font-family: 'Montserrat';
+    color: white;
+    
+    margin-top: 20px;
+    height: 200px;
+    
+    background-color: #222;
+    box-shadow: 0px 0px 2px #111;
+    border-radius: 5px;
+    
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.para-voce {
+    font-weight: 500;
+    text-align: center;
+    cursor: pointer;
+}
+
+.para-voce h3{
+    font-weight: 400;
+    font-size: 30px;
+}
+
+.para-voce h3:hover {
+    font-weight: 500;
+}
