--- a/src/app/components/entidades/professores/professores.component.css
+++ b/src/app/components/entidades/professores/professores.component.css
@@ -79,7 +79,15 @@ div button.btn:hover {
 .icon:hover{
     color: #A435F0;
 }
+
+.input-pesquisa {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .input-group{
+    width: 300px;
     max-width: 32vw;
 }
 
