--- a/src/app/components/entidades/professor-formulario/professor-formulario.component.css
+++ b/src/app/components/entidades/professor-formulario/professor-formulario.component.css
@@ -1,39 +1,31 @@
 .container{
-    max-width: 100%;
-    margin: 0;
     font-family: 'Montserrat', sans-serif;
-    position: fixed;
-    top:0;
-    left: 0;
+    margin: 30px 0;
     height: 100vh;
-    width: 100vw;
-    background-color: rgba(0,0,0, #fff);
-    backdrop-filter: blur(6px);
-    z-index: 2;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: opacity 3s linear;
+    width: 100%;
 }
 
-form {
-    color: black;
-    width: 306px;
-
+.inputs{
     display: flex;
     flex-direction: column;
-    background-color: #fff;
-    border-radius: 5px;
-    padding: 30px;
-    box-shadow: 0px 0px 10px #999;
 }
 
-form input{
+label{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+#valor{
+    max-width: 200px;
+    margin: 0;
+}
+
+form textarea{
     color: #000;
     margin: 5px auto;
-    display: block;
     width: 100%;
-    height: 35px;
 
     
     border-radius: 7px;
@@ -41,9 +33,26 @@ form input{
     border: 2px solid #222;
 }
 
-form input::placeholder{
-    padding: 5px;
-    color: #fff;
+form textarea:focus{
+    outline-style: solid;
+    outline-color: #A435F0;
+    outline-width: 2px;
+    border-radius: 7px;
+
+    border: 1px solid #A435F0;
+    box-shadow: 1px 1px 3px #A435F0;
+}
+
+form input{
+    color: #000;
+    margin: 5px auto;
+    width: 100%;
+    height: 35px;
+
+    
+    border-radius: 7px;
+    background-color: #fff;
+    border: 2px solid #222;
 }
 
 form input:focus{
@@ -56,25 +65,8 @@ form input:focus{
     box-shadow: 1px 1px 3px #A435F0;
 }
 
-form div {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
-}
-
-input {
-    display: inline-block;
-    margin: 10px 0;
-}
-
-form .controles{
-    display: flex;
-    justify-content: center;
-    margin-bottom: 0;
-}
-
 form .controles .btn{
-    width: 10vw;
+    width: 100px;
     border: 1px solid black;
     color: black;
     font-weight: 500;
@@ -96,11 +88,6 @@ form .controles .btn:hover{
     font-weight: 600;
 }
 
-span {
-    cursor: pointer;
-    margin-left: 50px;
-}
-
 .campos-vazios {
     border: 1px solid red;
 }
@@ -112,7 +99,7 @@ P {
 form .controles{
     display: flex;
     justify-content: space-between;
-    margin-bottom: 0;
+    margin: 20px 0;
 }
 h5{
     font-size: 23px;
@@ -124,4 +111,9 @@ h5{
 
 h5:hover{
     color: #A435F0;
+}
+
+.custom-file{
+    margin: 10px 0;
+    max-width: 500px;
 }
