--- a/src/app/components/entidades/pagamento/pagamento.component.html
+++ b/src/app/components/entidades/pagamento/pagamento.component.html
@@ -16,7 +16,7 @@
     <ul class="list-group" *ngFor="let curso of cursos">
         <li class="list-group-item disabled">
             <div class="img-curso">
-                <img src="{{curso.imagem}}" alt="">
+                <img src="{{urlImagem}}{{curso.imagem}}" alt="">
             </div>
 
             <div id="curso-titulo">
