--- a/src/app/components/entidades/aprendizado/aprendizado.component.html
+++ b/src/app/components/entidades/aprendizado/aprendizado.component.html
@@ -10,7 +10,7 @@
     <div class="row no-gutters">
 
       <div class="col-md-4">
-        <img src="{{curso.imagem}}" alt="...">
+        <img src="{{urlImagem}}{{curso.imagem}}" alt="...">
       </div>
 
       <div class="col-md-8">
