--- a/src/app/components/entidades/carrinho/carrinho.component.html
+++ b/src/app/components/entidades/carrinho/carrinho.component.html
@@ -34,7 +34,7 @@
 
 <div class="cursos" *ngFor="let cursoF of cursosFiltrados$ | async">
     <div class="card" style="max-width: 18rem;">
-      <img src="{{cursoF.imagem}}" class="card-img-top" alt="...">
+      <img src="{{urlImagem}}{{cursoF.imagem}}" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title" [routerLink]="['/curso-details']" (click)="enviarIdCurso(cursoF.id)">{{cursoF.titulo}}</h5>
         <p class="card-text">{{cursoF.descricao}}</p>
@@ -47,7 +47,7 @@
 
 <div class="cursos" *ngIf="pesquisando">
     <div class="card" style="max-width: 18rem;" *ngFor="let curso of cursos">
-      <img src="{{curso.imagem}}" class="card-img-top" alt="...">
+      <img src="{{urlImagem}}{{curso.imagem}}" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title" [routerLink]="['/curso-details']" (click)="enviarIdCurso(curso.id)">{{curso.titulo}}</h5>
         <p class="card-text">{{curso.descricao}}</p>
