--- a/src/app/components/entidades/professores/professores.component.html
+++ b/src/app/components/entidades/professores/professores.component.html
@@ -23,7 +23,7 @@
       <div class="row no-gutters" >
   
         <div class="col-md-4">
-          <img src="{{professorF.imagem}}" alt="...">
+          <img src="{{urlImagem}}{{professorF.imagem}}" alt="...">
         </div>
   
         <div class="col-md-8">
@@ -53,7 +53,7 @@
         <div class="row no-gutters" >
     
           <div class="col-md-4">
-            <img src="{{professor.imagem}}" alt="...">
+            <img src="{{urlImagem}}{{professor.imagem}}" alt="...">
           </div>
     
           <div class="col-md-8">
