fix bug cadastro professor

--- a/src/app/components/entidades/professor-formulario/professor-formulario.component.html
+++ b/src/app/components/entidades/professor-formulario/professor-formulario.component.html
@@ -33,7 +33,7 @@
             </label>
 
             <label>
-              Nome:
+              Sobrenome:
               <input type="text" name="sobrenome" id="titulo" placeholder="" [(ngModel)]="sobrenome">
             </label>
 
