--- a/src/app/components/entidades/professor-formulario/professor-formulario.component.html
+++ b/src/app/components/entidades/professor-formulario/professor-formulario.component.html
@@ -61,7 +61,7 @@
           </div>
           <div class="controles">
             <p class="link" [routerLink]="['/cursos']">Voltar</p>
-            <button type="submit" class="btn" [disabled]="!arquivosSelecionados" (click)="uploadArquivo()" (click)="envioFormulario()">Salvar</button>
+            <button type="submit" class="btn" [disabled]="!arquivosSelecionados" (click)="uploadArquivo()" (click)="envioFormulario()" [routerLink]="['/curso-formulario']">Salvar</button>
           </div>
         </form>
       </div>
