Adicionado o componente de conteudo do curso

--- a/src/app/components/entidades/formulario-cursos/formulario-cursos.component.html
+++ b/src/app/components/entidades/formulario-cursos/formulario-cursos.component.html
@@ -39,7 +39,7 @@
         </div>
         <div class="controles">
           <p class="link" [routerLink]="['/cursos']">Voltar</p>
-          <button type="submit" class="btn" (click)="envioFormulario()">Salvar</button>
+          <button type="submit" class="btn" (click)="envioFormulario()" [routerLink]="['/conteudo-curso']">Salvar</button>
         </div>
       </form>
     </div>
