--- a/src/app/components/entidades/formulario-cursos/formulario-cursos.component.html
+++ b/src/app/components/entidades/formulario-cursos/formulario-cursos.component.html
@@ -27,7 +27,7 @@
 
           <div class="custom-file">
             Foto:
-            <input id="customFile" type="file" class="custom-file-input" id="customFile">
+            <input id="customFile" type="file" class="custom-file-input" id="customFile" (change)="arquivoSelecionado($event)">
             <label class="custom-file-label" for="customFile">foto</label>
           </div>
 
@@ -39,7 +39,7 @@
         </div>
         <div class="controles">
           <p class="link" [routerLink]="['/cursos']">Voltar</p>
-          <button type="submit" class="btn" (click)="envioFormulario()" [routerLink]="['/conteudo-curso']">Salvar</button>
+          <button type="submit" class="btn" [disabled]="!arquivosSelecionados" (click)="uploadArquivo()" (click)="envioFormulario()" [routerLink]="['/conteudo-curso']">Salvar</button>
         </div>
       </form>
     </div>
